test/cli/test-empty-fields/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
    spec:
      containers:
      - name: container01
        image: dummyimagename
